--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hello-jenkins",
   "description": "hello jenkins test app",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "dependencies": {
     "express": "^4.13.3"
   },
